WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280113
Fix more miscellaneous smart pointer warnings across WebKit2
https://bugs.webkit.org/show_bug.cgi?id=280113
Summary
Fix more miscellaneous smart pointer warnings across WebKit2
Ryosuke Niwa
Reported
2024-09-21 01:11:16 PDT
Deploy more smart pointers as advised by the clang static analyzers.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-09-21 01:14:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34027
EWS
Comment 2
2024-09-21 12:35:15 PDT
Committed
284042@main
(8f5031b79b46): <
https://commits.webkit.org/284042@main
> Reviewed commits have been landed. Closing PR #34027 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-21 12:36:15 PDT
<
rdar://problem/136427963
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug