Fix more miscellaneous smart pointer warnings across WebKit2 https://bugs.webkit.org/show_bug.cgi?id=280113

Reviewed by Chris Dumez.

Deploy more smart pointers based on clang static analyzer warnings.

* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.cpp:
(WebKit::NetworkStorageManager::clearServiceWorkerRegistrations):
* Source/WebKit/UIProcess/Inspector/mac/WebInspectorUIProxyMac.mm:
(-[WKWebInspectorUIProxyObjCAdapter inspectorRef]):
(-[WKWebInspectorUIProxyObjCAdapter _protectedInspector]):
* Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::requestBackgroundFetchPermission):
(WebKit::NetworkProcessProxy::notifyBackgroundFetchChange):
(WebKit::NetworkProcessProxy::requestStorageSpace):
* Source/WebKit/UIProcess/UserContent/WebUserContentControllerProxy.cpp:
(WebKit::WebUserContentControllerProxy::addUserScriptMessageHandler):

Canonical link: https://commits.webkit.org/284042@main